--- a/style.css
+++ b/style.css
@@ -11,3 +11,58 @@ body
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
+
+#contentScreen, body
+{
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
+
+.container
+{
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+header
+{
+	text-align: center;
+	backdrop-filter: sepia(40%);
+	color: black;
+	width: 100%;
+	margin: 0;
+	border: 0;
+	padding: 3rem 0;
+	border-radius: 0 0 1rem 1rem;
+}
+
+h1
+{
+	font-size: clamp(1.5rem, 8vw, 4rem);
+}
+
+.header-tooltip
+{
+	padding: 2rem 0 0 0;
+	margin: 0;
+}
+
+.h2-container-container
+{
+	padding: 2rem 0;
+}
+
+.h2-container
+{
+	backdrop-filter: sepia(40%);
+	padding: 0.5rem;
+	margin: 0;
+	border-radius: 0.7rem;
+}
+
+.h2-container h2
+{
+	margin: 0;
+}
