--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
 	background: linear-gradient(var(--bg-rotation), var(--bg-gradient-2), var(--bg-gradient-1));
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	color: white;
 }
 
 #contentScreen, body
@@ -30,7 +31,7 @@ header
 {
 	text-align: center;
 	backdrop-filter: sepia(40%);
-	color: black;
+	color: white;
 	width: 100%;
 	margin: 0;
 	border: 0;
@@ -52,11 +53,14 @@ h1
 .h2-container-container
 {
 	padding: 2rem 0;
+	display: flex;
+	justify-content: center;
 }
 
 .h2-container
 {
 	backdrop-filter: sepia(40%);
+	width: fit-content;
 	padding: 0.5rem;
 	margin: 0;
 	border-radius: 0.7rem;
@@ -65,4 +69,11 @@ h1
 .h2-container h2
 {
 	margin: 0;
+}
+
+article a img
+{
+	width: 20rem;
+	max-width: 70vw;
+	cursor: pointer;
 }
