--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body
 	justify-content: center;
 }
 
-header
+#contentScreen header
 {
 	text-align: center;
 	backdrop-filter: sepia(40%);
@@ -42,13 +42,14 @@ header
 h1
 {
 	font-size: clamp(1.5rem, 8vw, 4rem);
+	margin: 0.3em 0;
 }
 
-.header-tooltip
+/*.header-tooltip
 {
 	padding: 2rem 0 0 0;
 	margin: 0;
-}
+}*/
 
 .h2-container-container
 {
