--- a/dialog.css
+++ b/dialog.css
@@ -102,6 +102,11 @@ dialog footer a:hover,
 	margin: 0 0.5rem;
 }
 
+.madewith-icons img
+{
+	height: 2rem;
+}
+
 .anim-generic-zoom-in
 {
 	animation: generic-zoom-in 250ms cubic-bezier(.39,.58,.57,1) 1;
