--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body
 	margin: 0;
 	border: 0;
 	padding: 0 0 5rem 0;
+	font-family: 'Ubuntu', system-ui;
 }
 
 #contentScreen
@@ -77,7 +78,7 @@ h1
 
 article a img
 {
-	width: 20rem;
+	width: 25rem;
 	max-width: 70vw;
 	cursor: pointer;
 	transition: transform 100ms cubic-bezier(.39,.58,.57,1);
@@ -115,4 +116,68 @@ article
 {
 	text-decoration: underline;
 	transform: scale(1.1);
+}
+
+.musiccontainercontainer
+{
+	display: flex;
+	justify-content: center;
+}
+
+.musiccontainer
+{
+	backdrop-filter: sepia(40%);
+	max-width: 80vw;
+	width: 37.5rem; /*article witdh + half article width*/
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-template-rows: 12.5rem 3rem;
+	gap: 1rem;
+}
+
+.musiccover
+{
+	background-image: var(--music-cover);
+	background-size: contain;
+	background-repeat: no-repeat;
+	display: inline-block;
+	height: 12.5rem; /*Half article width*/
+}
+
+.musictitle,
+.musicalbum,
+.musicartist
+{
+	margin-bottom: 0.3rem;
+}
+
+.musictitle a
+{
+	font-size: 2rem;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
+}
+
+.musicalbum a
+{
+	font-size: 1rem;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
+}
+
+.musicartist a
+{
+	font-size: 1rem;
+	text-decoration: none;
+	color: white;
+}
+
+.musiclyric
+{
+	width: 100%;
+	height: 100%;
+	font-weight: bold;
+	text-align: center;
 }
