--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html
 	--bg-gradient-1: #9a9996;
 	--bg-gradient-2: #241f31;
 	--bg-rotation: -9deg;
+	--music-cover:url('img/music/legoisland.jpg');
 }
 
 body
@@ -132,7 +133,12 @@ article
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	grid-template-rows: 12.5rem 3rem;
-	gap: 1rem;
+	border-radius: 0.7rem;
+}
+
+.musiccontainer>div
+{
+	padding: 1rem;
 }
 
 .musiccover
@@ -142,13 +148,7 @@ article
 	background-repeat: no-repeat;
 	display: inline-block;
 	height: 12.5rem; /*Half article width*/
-}
-
-.musictitle,
-.musicalbum,
-.musicartist
-{
-	margin-bottom: 0.3rem;
+	margin: 0.5rem;
 }
 
 .musictitle a
@@ -176,8 +176,29 @@ article
 
 .musiclyric
 {
-	width: 100%;
-	height: 100%;
 	font-weight: bold;
 	text-align: center;
+	overflow-wrap: break-word;
 }
+
+.musictitle a:hover,
+.musicalbum a:hover,
+.musicartist a:hover
+{
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+.listenlink img
+{
+	height: 2rem;
+	margin: 1rem 0 0 0;
+	cursor: pointer;
+	transition: transform 100ms cubic-bezier(.39,.58,.57,1);
+}
+
+.listenlink img:hover
+{
+	transform: scale(1.2);
+}
+
