--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ article
 	width: 37.5rem; /*article witdh + half article width*/
 	display: grid;
 	grid-template-columns: 1fr 2fr;
-	grid-template-rows: 12.5rem 3rem;
+	grid-template-rows: 12.5rem fit-content(10rem);
 	border-radius: 0.7rem;
 }
 
@@ -149,6 +149,16 @@ article
 	display: inline-block;
 	height: 12.5rem; /*Half article width*/
 	margin: 0.5rem;
+}
+
+.musictitle
+{
+	margin-bottom: 0.5rem;
+}
+
+.musicalbum
+{
+	margin-bottom: 0.3rem;
 }
 
 .musictitle a
@@ -176,7 +186,7 @@ article
 
 .musiclyric
 {
-	font-weight: bold;
+	font-weight: normal;
 	text-align: center;
 	overflow-wrap: break-word;
 }
