--- a/style.css
+++ b/style.css
@@ -166,12 +166,19 @@ article
 
 .musiccover
 {
+	grid-column: 1; grid-row: 1;
 	background-image: var(--music-cover);
 	background-size: contain;
 	background-repeat: no-repeat;
 	display: inline-block;
 	height: 12.5rem; /*Half article width*/
 	margin: 0.5rem;
+	cursor: pointer;
+}
+
+.musicinfo
+{
+	grid-column: 2; grid-row: 1;
 }
 
 .musictitle
@@ -209,9 +216,11 @@ article
 
 .musiclyric
 {
+	grid-column: 1/4; grid-row: 2;
 	font-weight: normal;
 	text-align: center;
 	overflow-wrap: break-word;
+	line-height: 1.4rem;
 }
 
 .musictitle a:hover,
@@ -233,5 +242,23 @@ article
 .listenlink img:hover
 {
 	transform: scale(1.2);
+}
+
+@media (max-width: 700px)
+{
+	.musiccontainer
+	{
+		display: block;
+		text-align: center;
+		padding-top: 1rem;
+	}
+
+	.musiccover
+	{
+		height: auto;
+		width: 50%;
+		aspect-ratio: 1/1;
+		display: inline-block;
+	}
 }
 
