músicas en sus archivos aparte

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html
 	--bg-gradient-1: #9a9996;
 	--bg-gradient-2: #241f31;
 	--bg-rotation: -9deg;
-	--music-cover:url('img/music/legoisland.jpg');
+	--music-cover:url('commonassets/icons/svgrepo/image-white-svgrepo-com.svg');
 }
 
 body
