--- a/commonassets/fonts.css
+++ b/commonassets/fonts.css
@@ -515,3 +515,54 @@
 	src: url('fonts/RobotoMono-Italic-VariableFont_wght.ttf');
 	font-style: italic;
 }
+
+/*
+	Comic Neue
+*/
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-Regular.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-Italic.ttf');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-Bold.ttf');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-BoldItalic.ttf');
+	font-weight: bold;
+	font-style: italic;
+}
+
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-Light.ttf');
+	font-weight: lighter;
+	font-style: normal;
+}
+
+@font-face
+{
+	font-family: 'Comic Neue';
+	src: url('fonts/ComicNeue-LightItalic.ttf');
+	font-weight: lighter;
+	font-style: italic;
+}
