--- a/dialog.css
+++ b/dialog.css
@@ -25,7 +25,7 @@ dialog main
 	overflow: auto;
 
 	line-height: 1.5rem;
-	padding: 0.8rem 0.8rem calc((0.8rem * 2) + 2rem) 0.8rem; /*The calc is done to prevent the content from being behind the footer, or at least try to*/
+	padding: 0.8rem;
 	margin: 0;
 }
 
