--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body
 	padding: 0.5rem;
 	font-size: 0.8rem;
 
+	filter: drop-shadow(0.3rem 0.5rem 0.2rem rgba(1,1,1,0.2));
 	background-color: var(--bg-gradient-2);
 
 	color: #f6f5f4;
@@ -58,6 +59,7 @@ body
 #contentScreen header
 {
 	text-align: center;
+	filter: drop-shadow(0 0.4rem 0.5rem rgba(1,1,1,0.1));
 	backdrop-filter: sepia(40%);
 	color: white;
 	width: 100%;
@@ -88,6 +90,7 @@ h1
 
 .h2-container
 {
+	filter: drop-shadow(0.3rem 0.5rem 0.2rem rgba(1,1,1,0.2));
 	backdrop-filter: sepia(40%);
 	width: fit-content;
 	padding: 0.5rem;
@@ -151,6 +154,7 @@ article
 
 .musiccontainer
 {
+	filter: drop-shadow(0.3rem 0.5rem 0.2rem rgba(1,1,1,0.2));
 	backdrop-filter: sepia(40%);
 	max-width: 80vw;
 	width: 37.5rem; /*article witdh + half article width*/
